--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy==1.24.2
 openai #==1.3.3
 pandas == 1.3.4  #pandas==1.5.3
 openpyxl==3.1.5
+XlsxWriter==3.2.2
 python-dotenv
 scipy  == 1.13.0
 fastapi == 0.115.11
