--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,42 @@
-faiss-cpu #==1.8.0
+
+python-dotenv
+
+# openpyxl==3.1.5
+# XlsxWriter==3.2.2
+# scipy  == 1.13.0
+# fastapi == 0.115.11
+# uvicorn == 0.30.6
+# tiktoken == 0.5.1
+# gradio == 5.23.2
+# boto3>=1.37.23
+# requests==2.32.3
+
+
+python-telegram-bot==22.0
+numpy==2.0.2
+pandas==2.2.2
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+openai==1.76.0
+scikit-learn
 nltk==3.9.1
 
-numpy==1.24.2
-openai #==1.3.3
-pandas == 1.3.4  #pandas==1.5.3
-openpyxl==3.1.5
-XlsxWriter==3.2.2
-python-dotenv
-scipy  == 1.13.0
-fastapi == 0.115.11
-uvicorn == 0.30.6
-tiktoken == 0.5.1
-gradio == 5.23.2
-boto3>=1.37.23
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
