--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ python-dotenv
 # boto3>=1.37.23
 # requests==2.32.3
 
+APScheduler==3.11.0
 boto3>=1.37.23
 python-telegram-bot==22.0
 numpy==2.0.2
@@ -18,6 +19,7 @@ pandas==2.2.2
 google-api-python-client==2.169.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
+oauth2client==3.0.0
 openai==1.76.0
 scikit-learn==1.6.1
 nltk==3.9.1
