--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ python-dotenv
 # requests==2.32.3
 
 APScheduler==3.11.0
-boto3>=1.37.23
 python-telegram-bot==22.0
 numpy==2.0.2
 pandas==2.2.2
@@ -23,6 +22,9 @@ oauth2client==3.0.0
 openai==1.76.0
 # scikit-learn==1.6.1
 nltk==3.9.1
+
+boto3>=1.37.23
+watchtower==3.4.0
 
 
 
