--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ google-api-python-client==2.169.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 oauth2client==3.0.0
-openai==1.76.0
+openai==1.102.0
 # scikit-learn==1.6.1
 nltk==3.9.1
 tzlocal
@@ -30,6 +30,6 @@ watchtower==3.4.0
 python-docx
 pdfminer.six
 
-
+phonenumbers
 langdetect
 langcodes
